# University

./: .gitignore  settings.gradle
2nd Semester/DSA/Lab1/FixedCapBiMap/: CMakeLists.txt
2nd Semester/DSA/Lab1/FixedCapBiMap/Headers/: FixedCapBiMap.h  FixedCapBiMapIterator.h
2nd Semester/DSA/Lab1/FixedCapBiMap/Source Files/: App.cpp  ExtendedTest.cpp  FixedCapBiMap.cpp  FixedCapBiMapIterator.cpp  ShortTest.cpp
2nd Semester/DSA/Lab1/SortedSet/: CMakeLists.txt
2nd Semester/DSA/Lab1/SortedSet/Headers/: SortedSet.h  SortedSetIterator.h
2nd Semester/DSA/Lab1/SortedSet/Source files/: App.cpp  ExtendedTest.cpp  ShortTest.cpp  SortedSet.cpp  SortedSetIterator.cpp
2nd Semester/DSA/Lab2/Bag/: CMakeLists.txt
2nd Semester/DSA/Lab2/Bag/Headers/: Bag.h  BagIterator.h
2nd Semester/DSA/Lab2/Bag/Source Files/: App.cpp  Bag.cpp  BagIterator.cpp  ExtendedTest.cpp  ShortTest.cpp
2nd Semester/DSA/Lab3/SMM - SLLA/: App.cpp  CMakeLists.txt
2nd Semester/DSA/Lab3/SMM - SLLA/Headers/: SMMIterator.h  SortedMultiMap.h  ValueIterator.h
2nd Semester/DSA/Lab3/SMM - SLLA/Source Files/: ExtendedTest.cpp  SMMIterator.cpp  ShortTest.cpp  SortedMultiMap.cpp  ValueIterator.cpp
2nd Semester/DSA/Lab4/SortedSet/: App.cpp  CMakeLists.txt
2nd Semester/DSA/Lab4/SortedSet/Headers/: SortedSet.h  SortedSetIterator.h
2nd Semester/DSA/Lab4/SortedSet/Source Files/: ExtendedTest.cpp  ShortTest.cpp  SortedSet.cpp  SortedSetIterator.cpp
2nd Semester/DSA/Lab5/SortedBag/: App.cpp  CMakeLists.txt  Requirement.txt
2nd Semester/DSA/Lab5/SortedBag/Headers/: SortedBag.h  SortedBagIterator.h
2nd Semester/DSA/Lab5/SortedBag/Source Files/: ExtendedTest.cpp  ShortTest.cpp  SortedBag.cpp  SortedBagIterator.cpp
3rd Semester/MAP/Lab3/: log4.txt
3rd Semester/MAP/Lab4/: log7.txt
3rd Semester/MAP/Lab5/: log8.txt
3rd Semester/MAP/Lab6/: log9.txt
3rd Semester/NETWORKS/: serverTCP.TXT
3rd Semester/PLF/Lab1/: Lab1.py.py  Mathematical model.txt
4th Semester/Artificial Intelligence/Lab7/: createdb.py  inference.py  myNet.pt  mydataset.txt  trainmodel.py
4th Semester/Artificial Intelligence/Lab8/: dataset.py  exampleCV.py  imagescript.py  inference.py
4th Semester/DBMS/Assignment1/: App.config  Form1.Designer.cs  Form1.cs
4th Semester/WebProgramming/1/: index.html  tags.txt
4th Semester/WebProgramming/3/: index.html  style.css
4th Semester/WebProgramming/4/: index.html
4th Semester/WebProgramming/5/: index.html  script.js  styles.css
4th Semester/WebProgramming/6/: index.html
4th Semester/WebProgramming/7/: package-lock.json
4th Semester/WebProgramming/EXAM/: add-book.html  add-book.php  add-publishingHouse.html  add-publishingHouse.php  connection.php  delete-publishingHouse.html  delete-publishingHouse.php  index.html  view-publishingHouse.html  view-publishingHouse.php
5th Semester/CVDL/: Database.py  Inference.py  Main.py  Model.py  Readme.md  Utils.py
5th Semester/CVDL/Project/: Database.py  GUI.py  (+5 more)
DB/Lab1/: SQLQuery2.sql
NETWORKS/: clientTCP.TXT
Non-Native/: pubspec.yaml
Non-Native/lib/: main.dart
Other/CinemaManager/: pom.xml
Other/ProducerConsumerThreads/: README.MD  pom.xml
app/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
server/: pom.xml
(+411 files in other folders)
